<resources>
    <string name="app_name">Alpha</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_acc_text">收銀員</string>
    <string name="login_acc_hint">帳號</string>
    <string name="login_pas_text">密碼</string>
    <string name="login_pas_hint">密碼</string>
    <string name="txt_login">登入</string>
    <string name="txt_sent">確定</string>
    <string name="txt_table">輸入商品編號、貨號、名稱</string>
    <string name="txt_clear">清除</string>
    <string name="txt_default">預設</string>
    <string name="number">1</string>
    <string name="txt_totalPrice">總價</string>
    <string name="txt_sentPrice">結帳</string>
    <string name="zero">0</string>
    <string name="txt_back">返回</string>
    <string name="txt_street">街口支付</string>
    <string name="txt_linepay">LinePay</string>
    <string name="txt_allPay">全支付</string>
    <string name="txt_love">愛心卡</string>
    <string name="txt_coupon">優惠卷</string>
    <string name="txt_selectPayment">選擇支付方式</string>
    <string name="txt_cash">現金</string>
    <string name="txt_cashCard">信用卡</string>
    <string name="txt_electricPayment">電子支付</string>
    <string name="txt_please_enter_payment">輸入金額</string>
    <string name="txt_confirmPayment">確認付款</string>
    <string name="txt_cancel">交易取消</string>
    <string name="txt_payment">支付</string>
    <string name="txt_change">找零</string>
    <string name="txt_delete">作廢</string>
    <string name="txt_updateFTP">更新資料庫</string>
    <string name="txt_downloading">資源下載中，請稍後</string>

    <string-array name="tableNames">
        <item>UserTable</item>
        <item>ProductTable</item>
        <item>TransactionTable</item>
    </string-array>

    <!--UserDB欄位-->
    <string-array name="UserItems">
        <item>uId</item>
        <item>uName</item>
        <item>account</item>
        <item>password</item>
    </string-array>

    <!--ProductDB欄位-->
    <string-array name="ProductItems">
        <item>pId</item>
        <item>pName</item>
        <item>pType</item>
        <item>pPrice</item>
        <item>pNumber</item>
        <item>pPhoto</item>
    </string-array>

    <!--TransactionTable欄位-->
    <string-array name="TransactionItems">
        <item>tId</item>
        <item>tDate</item>
        <item>tDescription</item>
    </string-array>

    <!--商品分類-->
    <string-array name="productType">
        <item>水果</item>
        <item>食物</item>
        <item>飲料</item>
        <item>其他</item>
        <item>組合商品</item>
    </string-array>

    <!--支付類別-->
    <string-array name="paymentType">
        <item>現金</item>
        <item>信用卡</item>
        <item>一卡通</item>
    </string-array>

</resources>