<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_acc_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:hint="@string/login_acc_hint"
        android:inputType="number"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_pas_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_pas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:hint="@string/login_pas_hint"
        android:inputType="number"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="#B18FEF"
        android:text="@string/txt_login"
        android:textSize="30sp" />

</LinearLayout>