<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Payment">

    <LinearLayout
        android:id="@+id/layoutPaymentWay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <!--現金-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cash"
            android:layout_weight="1"/>

        <!--信用卡-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/txt_cashCard"
            android:layout_weight="1"/>

        <!--無連線支付(電子支付)-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/txt_electricPayment"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--付款介面-->
    <LinearLayout
        android:id="@+id/layout_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPaymentWay"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/txt_please_enter_payment"
            android:textSize="25sp"
            android:autofillHints="0"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="25sp"
            android:text="@string/txt_clear"/>

    </LinearLayout>


    <!--重新選擇支付方式-->
    <!--付款金額滿足前不可點擊-->
    <Button
        android:id="@+id/btn_confirmPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_calculator"
        android:textSize="25sp"
        android:text="@string/txt_confirmPayment"
        android:visibility="visible"
        android:enabled="false"/>


    <!--上一頁-->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textSize="30sp"
        android:text="@string/txt_back"/>

</RelativeLayout>